test/parse/fail/startingComma.em
# Can't start a line with a comma
# Expect failure

One two
	three four
		, five
	six
